css/canitquest.css
.body
{
    display: flex;
    align-items: center;
}

.tool-window
{
    width: 75%;
    height: 75vh;
    border: 1px solid #bb9a5b;
    padding: 5vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.tool-search
{
    height: fit-content;
    width: 80%;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.search-bar
{
    border-radius: 0;
    background-color: #343438;
    border-style: none;
    height: 5vh;
    width: 32vw;
    font-size: 40px;
    color: #bb9a5b;
}

.grid-container
{
    width: 100%;
    height: 100%;
    display: grid;
    /* grid-template-rows: repeat(8, 1fr); */
    grid-template-columns: repeat(8, 1fr);
    grid-auto-flow: dense;
    /*grid-auto-rows: minmax(auto, auto); */
    gap: 10px;
    padding: 2vh;
}

.grid-element
{
    background-color: white;
    /* grid-row: span 1; */
    /* grid-column: span 1; */
    cursor: pointer;
    width: fit-content;
    height: fit-content;
}

.grid-image
{
    /* object-fit: contain; */
    /* max-width: 100%;
    max-height: 100%; */
    display: block;
    aspect-ratio: 1 / 1;
}

.grid-scrollbar
{
    margin-top: 4vh;
    height: 100%;
    width: 80%;
    display: flex;
}

.custom-tooltip
{
    padding: 1vh;
    position: absolute;
    border: 1px solid #bb9a5b;
    color: #bb9a5b;
    background-color: #0B0E11;
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.3s;
}

.hidden-grid-elements
{
    display: none;
}

@media (max-width: 480px)
{
    .tool-window
    {
        padding: 2vh;
    }

    .search-bar
    {
        height: 3vh;
    }

    .grid-container
    {
        padding: 1vh;
        grid-template-columns: repeat(3, 1fr);
        grid-template-rows: repeat(4, 1fr);
    }
}

